fixed spacing for buttons

--- a/style.css
+++ b/style.css
@@ -26,19 +26,19 @@ body {
 }
 .top-questions {
     width: 100%;
-    height: 20%;
+    height: 100%;
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
     align-items: center;
     margin: 20px;
     margin-bottom: 10px;
 }
 .bottom-questions {
     width: 100%;
-    height: 20%;
+    height: 100%;
     min-height: 50px;
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
     align-items: center;
     margin: 20px;
     margin-top: 10px;
@@ -56,7 +56,7 @@ body {
 }
 
 #answer-buttons {
-    height: 100%;
+    height: auto;
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -68,7 +68,12 @@ body {
 .btn {
     width: 40%;
     height: 100%;
-    padding: 10px;
+    padding-left: 2%;
+    padding-right: 2%;
+    padding-top: 4%;
+    padding-bottom: 4%;
+    margin-left: 2%;
+    margin-right: 2%;
     font-size: 16px;
     border: none;
     border-radius: 4px;
@@ -76,6 +81,7 @@ body {
     background-color: #8338EC;
     color: white;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.08);
+    overflow: hidden;
 }
 
 .btn:hover {
@@ -118,4 +124,10 @@ body {
 h1 {
     font-size: 40px;
     margin-bottom: 10px;
+}
+
+.touch-device .button:hover {
+    background-color: #8338EC; 
+    color: white;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.08);
 }
